# sisiya

./: AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  README  README.md  TODO  bootstrap  configure.ac  index.html  params.json  sisiya_common_conf.php
db/: README  db_PostgreSQL.conf  dbscript.sh  drop_index.sql  exec_PostgreSQL.sh  generate_reports.sh  index.sql  language_tr.txt  make_history_archive_PostgreSQL.sh  populate_db.sql  sisiya_check_system.sh
doc/: ProjectDescription.txt  SourceFourge.txt  sisiya_httpd.8  sisiya_httpd.conf.5  sisiyad.8  sisiyad.conf.5  sisiyaqd.8  sisiyaqd.conf.5
edbc/: Doxyfile  Makefile  Makefile.am  Makefile.org  configure.ac
edbc/debian/: changelog  control  copyright  postinst  rules
edbc/examples/: Makefile  class_path  eDBInfo.java  eDBInfo.properties  postgresql_test.cpp  postgresql_test.mkf  test1.cpp  test2.cpp  test_db.cpp
edbc/include/: Connection.hpp  DatabaseMetaData.hpp  DriverManager.hpp  ResultSet.hpp  ResultSetMetaData.hpp  SQLException.hpp  SQLTypes.hpp  Statement.hpp
edbc/lib/: COPYING  Makefile  Makefile.am  configure.ac
edbc/mysql/: AUTHORS  Makefile.am  Makefile.org  README  configure.ac
edbc/mysql/include/: MySQL_Connection.hpp  MySQL_DatabaseMetaData.hpp  MySQL_ResultSet.hpp  MySQL_ResultSetMetaData.hpp  MySQL_Statement.hpp
edbc/mysql/src/: MySQL_Connection.cpp  MySQL_DatabaseMetaData.cpp  MySQL_ResultSet.cpp  MySQL_ResultSetMetaData.cpp  MySQL_Statement.cpp
edbc/postgresql/: Makefile  Makefile.am  README  bootstrap  configure.ac
edbc/postgresql/include/: PostgreSQL_Connection.hpp  PostgreSQL_DatabaseMetaData.hpp  PostgreSQL_ResultSet.hpp  PostgreSQL_ResultSetMetaData.hpp  PostgreSQL_Statement.hpp
edbc/postgresql/src/: PostgreSQL_Connection.cpp  PostgreSQL_DatabaseMetaData.cpp  PostgreSQL_ResultSet.cpp  PostgreSQL_ResultSetMetaData.cpp  PostgreSQL_Statement.cpp
edbc/src/: DriverManager.cpp
edbc/utils/include/: UpperLowerCase.hpp  parseURL.hpp  stringConvert.hpp  stringtok.hpp  trim.hpp
edbc/utils/src/: UpperLowerCase.cpp  parseURL.cpp
etc/: sisiya.conf  sisiya_apache.conf  sisiya_httpd  sisiya_httpd.conf  sisiya_nginx.conf  sisiya_php_ini.conf  sisiyad  sisiyad_systemd  sisiyaqd  sisiyaqd.conf
etc/cron.d/: sisiya-alerts  sisiya-archive  sisiya-check-expired  sisiya-client-checks  sisiya-remote-checks  sisiya-rss  sisiya_alerts  sisiya_archive  sisiya_check_expired  sisiya_client_checks  sisiya_client_checks_perl  sisiya_db_checks  sisiya_remote_checks  sisiya_rss
old/db/: Makefile  create_tables.sql  db_MySQL.conf  drop_tables.sql  exec_MySQL.sh  generate_reports_MySQL.sh  insert_message.sh  language.sh  language_descriptions.txt  language_en.txt  make_history_archive_MySQL.sh
old/sisiya_check/: sisiya_client.conf
old/sisiya_cron/: sisiya_cron.sln
old/sisiya_winclient/: GPL.txt  (+14 more)
old/src/: INSTALL  SisIYASendMessage.java  bootstrap  complx_configure.in  configure.in  esem.h  esignal.h  inet.h  make_sisiya_client_checks_perl_source.sh  make_sisiya_client_systems_source.sh  make_sisiya_server_checks_source.sh  make_sisiya_webgui_systems_images_source.sh  mesg.h  misc.c  misc.h  resolve.c  resolve.h  sisiya_check_http.c  sisiya_check_pop3.c  sisiya_check_telnet.c  sisiya_conf.c  sisiyac.c  sisiyac.mkf  sisiyac1.h  sisiyad.c  sisiyad_common.h  sisiyad_mysql.h  sisiyad_mysql.mkf  sisiyad_postgresql.mkf  systype.h
packaging/: copyright  version.txt
sisiya-client-checks/: Makefile  SisIYA_Config.pm  SisIYA_Config_local.pl  changelog  changelog.Debian  m.txt  version.txt
sisiya-remote-checks/: Makefile  changelog  version.txt
sisiya-webui-images/: Makefile
sisiya-webui-php/: INSTALL.txt  Makefile  README.txt  TODO  config.php  sisiya_admin.php  sisiya_alerts.php  sisiya_check_expired.php  sisiya_gui.php  sisiya_login.php  sisiya_rss.php  sisiya_setup_wizard.php  sisiya_updatedb.php
sisiya_check/: Makefile
sisiya_check_perl/: Makefile  SisIYA_Config.pm  SisIYA_Config_local.pl  run_all.sh
sisiya_client_checks/: Makefile
sisiya_remote_checks/: Makefile
sisiya_server/: Doxyfile  Makefile.am  configure.in  sisiyad.mkf
sisiya_server/doc/html/: classConfFile-members.html  classConfFile.html  dir_000000.html  dir_000001.html  files.html  functions.html
sisiya_server/doc/latex/: dir_000001.tex  doxygen.sty
sisiya_server/include/: ConfFile.hpp  common.hpp
sisiya_server/src/: Semaphore.cpp  SisIYAMessage.cpp  SisIYAServer.cpp  esignal.cpp
sisiya_website/: Makefile  copy_all.sh  index.html
sisiya_winclient/: ConfFile.hpp  EventLog.h  SisIYAwinclient.cpp  SisIYAwsInstaller_general.nsi  SisIYAwsWinService.resX  app.aps  stdafx.h  trim.cpp
sisiyad/: COPYING  Makefile.am  README  bootstrap  configure.ac  sisiyad.conf  sisiyad_thread.mkf  sisiyahbd.conf  sisiyahbd.mkf  sisiyahbd_systems.conf  version.txt
sisiyad/debian/: changelog  conffiles  control  rules
sisiyad/doc/html/: ConfFile_8hpp-source.html  annotated.html  functions_func.html  index.html
sisiyad/doc/latex/: annotated.tex  classConfFile.tex  dir_000000.tex  refman.tex
sisiyad/include/: ConfFile.hpp  Semaphore.hpp  SisIYAMessage.hpp  SisIYAServer.hpp  SystemsConf.hpp  common.hpp  esignal.hpp  misc.h
sisiyad/src/: ConfFile.cpp  Semaphore.cpp  SisIYAMessage.cpp  SisIYAServer.cpp  esignal.cpp  misc.c  sisiyad.cpp  sisiyad_thread.cpp  sisiyahbd.cpp  test_trim.cpp
src/: Makefile.am  db_configure.in  esem.c  esignal.c  make_edbc_source.sh  make_sisiya_client_checks_perl_source.sh  make_sisiya_client_checks_source.sh  make_sisiya_source.sh  make_sisiya_webgui_source.sh  mesg.c  sisiya.h  sisiya_check_imap.c  sisiya_check_smtp.c  sisiya_check_ssh.c  sisiya_conf.h  sisiyac1.c  sisiyac_sparc_SunOS_5.8  sisiyaconnect.c  sisiyaconnect.mkf  sisiyad.mkf  sisiyad1.c  sisiyad1.h  sisiyad_common.c  sisiyad_mysql.c  sisiyad_postgresql.c  sisiyad_postgresql.h  sisiyaqd.c  systype.c
utils/: README.txt  build_deb.sh  build_pacman.sh  build_rpm.sh  copy_sisiya_source_files_to_sourceforge.sh  create_sisiya_all_packages.sh  create_sisiya_client_checks_source_packages.sh  create_sisiya_remote_checks_source_packages.sh
(+1018 files in other folders)
